Fix: removed redundant code for accuracy ldeaderboard